Changes
+++++++

0.2.27
------
- update VL summaries

0.2.26
------
- rename list filter to "Endline VL"
- filter admin qs to only show those with missing baseline vl
  or missing endline vl

0.2.25
------
- change np.NaN to np.nan in preparation of VL dataframe

0.2.24
------
- add qareports
    * vl and vl summary
    * subject transfers
- recalc duration fields
- bump edc=0.5.94

0.2.23
------
- fix bug in 0.2.22 release data migrations where no match is found
  (#810, #812)

0.2.22
------
- data-fix release to correct incorrect gender entered in Patient Log,
  Subject Screening and Subject Consent for participants (#810, #812)

0.2.21
------
- increase 12m visit upper bound to 6m (intecomm_visit_schedule)

0.2.20
------
- updates to home page ListGroup
    - add 'Account Management' link
    - change Switch Sites and Logout items from get to post
- add generated table `CurrentConditions` to list initial
  diagnoses for each patient
- add utils to generate data for `CurrentConditions`
- change CareSeeking metadatarule to return True after 14072023
  regardless of condition(s)
- migrations
- bump edc==0.5.90

0.1.92
------
- fix setting.DJANGO_DEBUG_TOOLBAR_ENABLED

0.1.91
------
- bump edc 0.5.50

0.1.90
------
- bump edc 0.5.49
- review index inheritance
- track locale from django-audit-fields

0.1.89
------
- bump edc 0.5.48

0.1.88
------
- add module edc-form-runners
- add custom form runners
- remove unused fields on subject visit, subject visit missed
- fix medication adherence form validator
- intecomm-form-validators 0.1.48
- bump edc 0.5.47

0.1.87
------
- Add additional area units to Health Economics: Property (#683)
    - add 'calculated_land_surface_area' field (standardised to m2)
    - add additional units: Decimals (1/100th of Acre), Sq. feet
    - convert 'land_surface_area' to decimal field
- bump edc 0.5.46

0.1.86
------
- fix issue with add_subjects_to_group where site id is lost
  when running on multisite server
- bump edc 0.5.44

0.1.85