@@ -1,6 +1,11 @@
 Changes
 +++++++
 
+unreleased
+------
+- add QA_REPORTS(_AUDIT) and INTECOMM_REPORTS(_AUDIT) groups to
+  AUDITOR, CLINICIAN(_SUPER), and DATA_MANAGER roles
+
 0.2.27
 ------
 - update VL summaries
